--- a/css/styleOne.css
+++ b/css/styleOne.css
@@ -227,4 +227,7 @@ body{
     .categoryImported {
         font-size: small;
     }
+    .contactInformationContainer{
+        margin-top: 5px;
+    }
   }
