--- a/css/styleThree.css
+++ b/css/styleThree.css
@@ -138,7 +138,7 @@ body{
 
 .invoiceInfoContainer {
     margin-top: 50px;
-    height: 73vh;
+    height: 68vh;
 }
 
 .form {
@@ -148,6 +148,7 @@ body{
 
 #submitPurchase {
     border: 1px solid black;
+    border-radius: 5px;
     padding: 15px;
     margin-left: 45vw;
     font-style: normal;
@@ -162,7 +163,7 @@ body{
 
 #totalAmount {
     margin-top: 30px;
-    margin-bottom: 70px;
+    margin-bottom: 60px;
     color: rgb(255, 0, 51);
     font-size: 30px;
     font-weight: bold;
